"Current" tooltips and mobile z-index fix

--- a/src/styles/components/base.scss
+++ b/src/styles/components/base.scss
@@ -4,7 +4,7 @@ main.main-content {
 	background-attachment: fixed;
 	background-position: center left;
 
-	&:before {
+	&:after {
 		content: '';
 		position: absolute;
 		top: 0;
