--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -7,7 +7,7 @@ header.app__header {
 
 	@include media('<lg') {
 		height: auto;
-		z-index: 99;
+		z-index: 9;
 	}
 }
 
