--- a/src/styles/components/weapon/current/current-perks.scss
+++ b/src/styles/components/weapon/current/current-perks.scss
@@ -7,7 +7,7 @@
 		padding: 0;
 		margin: 0;
 
-		li {
+		> li {
 			position: relative;
 			padding: 0.25rem;
 			margin-right: 0.5rem;
